adding new image and updating html and css file

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
       <div class="navbar-menu">
         <a href="#home"><i class="fa-solid fa-home"></i> Home</a>
         <a href="#about"><i class="fa-solid fa-user"></i> About Me</a>
-        <a href="#achieve"
-          ><i class="fa-solid fa-graduation-cap"></i> My Achievement</a
-        >
+        <a href="#skill"><i class="fa-solid fa-code"></i> Skills & Tools</a>
         <a href="#contact"
           ><i class="fa-solid fa-address-book"></i> Contact Me</a
         >
@@ -30,60 +28,141 @@
       <!-- Welcome start -->
       <section class="welcome" id="home">
         <div class="welcome-page">
-          <h1>Welcome To My Website</h1>
+          <h1>Welcome To <span>Ibrahim</span>Website</h1>
           <p>
-            My name is <span>Ibrahim</span>, i build this website with the help
-            of internet
+            My name is Ibrahim, i build this website with the help of internet
           </p>
           <a href="#about" class="welcome-button">Learn More</a>
         </div>
       </section>
 
       <!-- Welcome End -->
+      <!-- About Section start -->
       <div>
-        <section>
-          <div id="about">
-            <h2>About Me</h2>
-            <p>Hai my name is Ibrahim</p>
-            <p>
-              I am an undergraduate student from Universitas Sultan Ageng
-              Tirtayasa
-            </p>
-            <p>I hope i can build this website well</p>
+        <section class="about" id="about">
+          <h2>About Me</h2>
+          <div class="about-me">
+            <div class="content">
+              <h3>Hi my name is ibrahim</h3>
+              <p>
+                I am an undergraduate student from Universitas Sultan Ageng
+                Tirtayasa
+              </p>
+              <p>I hope i can build this website well</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Possimus deleniti exercitationem quia? Dolores pariatur magni
+                optio cum a, laborum praesentium consequuntur libero eum
+                provident esse, illo officia quae sunt beatae!
+              </p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut
+                vitae labore consequuntur corporis eos veritatis natus qui
+                autem, amet minus ex ipsam. Nulla debitis neque, tempora culpa
+                harum eum unde. Esse deleniti cupiditate temporibus rem nihil
+                fugit in nisi placeat iste accusantium quibusdam, adipisci
+                dolorum unde architecto ullam aliquid voluptate odio commodi
+                repellendus. Velit in nemo asperiores molestiae corporis
+                dolores. At accusamus quod nesciunt provident molestiae,
+                consequatur optio praesentium mollitia possimus. Iste omnis
+                commodi delectus sequi. In eveniet natus illum nemo accusantium
+                perspiciatis eum dolorem, vero voluptatem numquam dignissimos
+                nesciunt. Reiciendis distinctio nostrum nesciunt accusantium sed
+                eius dolore explicabo unde odit dolorum tenetur quis, adipisci
+                obcaecati aperiam mollitia labore omnis, nam, odio libero.
+                Perferendis itaque eligendi, tempora quia iure quibusdam. Magnam
+                nobis doloremque alias sapiente dignissimos quibusdam molestias
+                sint veniam eum pariatur maxime quas beatae est porro corporis
+                dicta laborum illo ratione molestiae rerum, ea eius. Officiis
+                vitae alias dicta?
+              </p>
+            </div>
+
+            <div class="about-foto">
+              <img src="aset/pasfoto.jpg" alt="Foto Diri" />
+            </div>
           </div>
         </section>
       </div>
+      <!-- About Section End -->
+      <!-- skill Section Start -->
       <div>
-        <section>
-          <div id="achieve">
-            <h1>My Achievement</h1>
-            <ul>
-              <li>
-                Best Computer and Networking Student at SMKN 1 Kota Serang in
-                2022
-              </li>
-              <li>
-                Best informatics Student at Universitas Sultan Ageng Tirtayasa
-                in 2022
-              </li>
-              <li>
-                Second Place in LKS Information Technologies Networking System
-                Administration
-              </li>
-            </ul>
+        <section class="skill" id="skill">
+          <h2>Skills & Tools</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias
+            minima harum quibusdam corporis amet! Suscipit voluptatibus cumque
+            fuga nobis, neque sapiente magnam modi odio architecto at animi
+            ipsam eveniet porro?
+          </p>
+          <div class="list">
+            <div class="container">
+              <img src="aset/html.png" alt="html 5 logo" />
+              <div class="text">
+                <h4>HTML 5</h4>
+              </div>
+            </div>
+            <div class="container">
+              <img src="aset/css-3.png" alt="css 3 logo" />
+              <div class="text">
+                <h4>CSS</h4>
+              </div>
+            </div>
+            <div class="container">
+              <img src="aset/js.png" alt="javascript logo" />
+              <div class="text">
+                <h4>JavaScript</h4>
+              </div>
+            </div>
+            <div class="container">
+              <img src="aset/python.png" alt="python logo" />
+              <div class="text">
+                <h4>Python</h4>
+              </div>
+            </div>
+            <div class="container">
+              <img src="aset/c-.png" alt="c++ logo" />
+              <div class="text">
+                <h4>C / C++</h4>
+              </div>
+            </div>
+            <div class="container">
+              <img src="aset/vscode.png" alt="visual studio code logo" />
+              <div class="text">
+                <h4>VSCode</h4>
+              </div>
+            </div>
+          </div>
+          <h2>Other Related Skills</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel odit
+            tempora reprehenderit? Ratione facilis architecto, quos quisquam
+            eius quis sunt voluptatibus sint eaque dolorum porro excepturi amet
+            eos earum libero!
+          </p>
+          <div class="list">
+            <div class="container">
+              <img src="aset/linux.png" alt="linux logo" />
+              <div class="text">
+                <h4>Linux Terminal</h4>
+              </div>
+            </div>
+            <div class="container">
+              <img src="aset/router.png" alt="router logo" />
+              <div class="text">
+                <h4>Computer Network</h4>
+              </div>
+            </div>
+            <div class="container">
+              <img src="aset/git.png" alt="git logo" />
+              <div class="text">
+                <h4>Git</h4>
+              </div>
+            </div>
           </div>
         </section>
       </div>
-      <div>
-        <section>
-          <h2>Gallery</h2>
-          <div id="gallery">
-            <img src="" alt="" />
-            <img src="" alt="" />
-            <img src="" alt="" />
-          </div>
-        </section>
-      </div>
+      <!-- skill section End -->
 
       <div>
         <section>
