updating the skills and contact section

--- a/index.html
+++ b/index.html
@@ -89,12 +89,6 @@
       <div>
         <section class="skill" id="skill">
           <h2>Skills & Tools</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias
-            minima harum quibusdam corporis amet! Suscipit voluptatibus cumque
-            fuga nobis, neque sapiente magnam modi odio architecto at animi
-            ipsam eveniet porro?
-          </p>
           <div class="list">
             <div class="container">
               <img src="aset/html.png" alt="html 5 logo" />
@@ -133,13 +127,7 @@
               </div>
             </div>
           </div>
-          <h2>Other Related Skills</h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel odit
-            tempora reprehenderit? Ratione facilis architecto, quos quisquam
-            eius quis sunt voluptatibus sint eaque dolorum porro excepturi amet
-            eos earum libero!
-          </p>
+          <h2>Other Related Skills & Tools</h2>
           <div class="list">
             <div class="container">
               <img src="aset/linux.png" alt="linux logo" />
@@ -148,7 +136,7 @@
               </div>
             </div>
             <div class="container">
-              <img src="aset/router.png" alt="router logo" />
+              <img src="aset/router1.png" alt="router logo" />
               <div class="text">
                 <h4>Computer Network</h4>
               </div>
@@ -164,17 +152,46 @@
       </div>
       <!-- skill section End -->
 
+      <!-- contact section start -->
+
       <div>
-        <section>
+        <section class="contact" id="contact">
           <h2>Contact</h2>
-          <div id="contact">
-            <a href="">Website</a>
-            <a href="">Instagram</a>
-            <a href="">Github</a>
-            <a href="">Linkedin</a>
+          <div class="list">
+            <div class="container">
+              <a href="https://www.ibrahimfe.github.io"
+                ><i class="fa-solid fa-link"></i
+              ></a>
+            </div>
+            <div class="container">
+              <a href="https://www.instagram.com/baim.38/"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+            </div>
+            <div class="container">
+              <a href="https://github.com/ibrahimfe"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+            </div>
+            <div class="container">
+              <a href="https://www.linkedin.com/in/ibra-him-/"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+            </div>
+            <div class="container">
+              <a href="https://youtu.be/dQw4w9WgXcQ"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </div>
+            <div class="container">
+              <a href="https://www.wa.me/+6281213369280"
+                ><i class="fa-brands fa-whatsapp"></i
+              ></a>
+            </div>
           </div>
         </section>
       </div>
+      <!-- contact section end -->
     </main>
     <div>
       <footer class="footer">
