--- a/index.html
+++ b/index.html
@@ -192,12 +192,36 @@
         </section>
       </div>
       <!-- contact section end -->
+      <!-- Form start -->
+      <div>
+        <form class="form" id="form">
+          <h2>Contact Us</h2>
+          <div class="form-main">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required />
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required />
+
+            <label for="subject">Subject:</label>
+            <input type="text" id="subject" name="subject" required />
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+
+            <input type="submit" value="Send" />
+          </div>
+        </form>
+      </div>
+      <!-- Form end -->
     </main>
+    <!-- Footer -->
     <div>
       <footer class="footer">
         <p>Made by Ibrahim</p>
       </footer>
     </div>
+    <!-- Footer -->
 
     <!-- Font Awesome -->
     <script
