adding gallerlery and a footer

--- a/index.html
+++ b/index.html
@@ -185,32 +185,39 @@
           <h2>Contact</h2>
           <div class="list">
             <div class="container">
-              <a href="https://www.ibrahimfe.github.io"
+              <a href="mailto:ibrahiimm.f@gmail.com" target="_blank"
+                ><i class="fa-solid fa-envelope"></i
+              ></a>
+            </div>
+            <div class="container">
+              <a href="https://ibrahimfe.github.io" target="_blank"
                 ><i class="fa-solid fa-link"></i
               ></a>
             </div>
             <div class="container">
-              <a href="https://www.instagram.com/baim.38/"
+              <a href="https://www.instagram.com/baim.38/" target="_blank"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
             </div>
             <div class="container">
-              <a href="https://github.com/ibrahimfe"
+              <a href="https://github.com/ibrahimfe" target="_blank"
                 ><i class="fa-brands fa-github"></i
               ></a>
             </div>
             <div class="container">
-              <a href="https://www.linkedin.com/in/ibra-him-/"
+              <a href="https://www.linkedin.com/in/ibra-him-/" target="_blank"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
             </div>
             <div class="container">
-              <a href="https://youtu.be/dQw4w9WgXcQ"
+              <a
+                href="https://www.youtube.com/@Ibrahim-qt9bs/featured"
+                target="_blank"
                 ><i class="fa-brands fa-youtube"></i
               ></a>
             </div>
             <div class="container">
-              <a href="https://www.wa.me/+6281213369280"
+              <a href="https://wa.me/6281213369280" target="_blank"
                 ><i class="fa-brands fa-whatsapp"></i
               ></a>
             </div>
@@ -244,7 +251,7 @@
     <!-- Footer -->
     <div>
       <footer class="footer">
-        <p>Made by Ibrahim</p>
+        <p>Author : Ibrahim&COPY;</p>
       </footer>
     </div>
     <!-- Footer -->
