adding some update here and there

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#home"><i class="fa-solid fa-home"></i> Home</a>
         <a href="#about"><i class="fa-solid fa-user"></i> About Me</a>
         <a href="#skill"><i class="fa-solid fa-code"></i> Skills & Tools</a>
+        <a href="#gallery"><i class="fa-solid fa-image"></i> Gallery</a>
         <a href="#contact"
           ><i class="fa-solid fa-address-book"></i> Contact Me</a
         >
@@ -29,7 +30,7 @@
       <section class="welcome" id="home">
         <div class="welcome-page">
           <h1 id="welcome"></h1>
-          <p>And I Am a Software Developer</p>
+          <p>This Is My Portfolio Website</p>
           <a href="#about" class="welcome-button">Learn More</a>
         </div>
       </section>
@@ -39,44 +40,48 @@
       <div>
         <section class="about" id="about">
           <h2>About Me</h2>
-          <div class="about-me hidden">
-            <div class="content">
-              <h3>Hi my name is ibrahim</h3>
+          <div class="about-me">
+            <div class="content hidden">
+              <h3>Who Am I?</h3>
               <p>
-                I am an undergraduate student from Universitas Sultan Ageng
-                Tirtayasa
-              </p>
-              <p>I hope i can build this website well</p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Possimus deleniti exercitationem quia? Dolores pariatur magni
-                optio cum a, laborum praesentium consequuntur libero eum
-                provident esse, illo officia quae sunt beatae!
+                Hey, everyone! I'm Ibrahim, a computer science undergraduate
+                student studying at Universitas Sultan Ageng Tirtayasa. I've
+                always been fascinated by technology and how it can make our
+                lives easier and more efficient. That's why I decided to pursue
+                a degree in computer science. When I'm not working on my
+                studies, you can find me tinkering with code, learning new
+                programming languages, or playing video games.
               </p>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut
-                vitae labore consequuntur corporis eos veritatis natus qui
-                autem, amet minus ex ipsam. Nulla debitis neque, tempora culpa
-                harum eum unde. Esse deleniti cupiditate temporibus rem nihil
-                fugit in nisi placeat iste accusantium quibusdam, adipisci
-                dolorum unde architecto ullam aliquid voluptate odio commodi
-                repellendus. Velit in nemo asperiores molestiae corporis
-                dolores. At accusamus quod nesciunt provident molestiae,
-                consequatur optio praesentium mollitia possimus. Iste omnis
-                commodi delectus sequi. In eveniet natus illum nemo accusantium
-                perspiciatis eum dolorem, vero voluptatem numquam dignissimos
-                nesciunt. Reiciendis distinctio nostrum nesciunt accusantium sed
-                eius dolore explicabo unde odit dolorum tenetur quis, adipisci
-                obcaecati aperiam mollitia labore omnis, nam, odio libero.
-                Perferendis itaque eligendi, tempora quia iure quibusdam. Magnam
-                nobis doloremque alias sapiente dignissimos quibusdam molestias
-                sint veniam eum pariatur maxime quas beatae est porro corporis
-                dicta laborum illo ratione molestiae rerum, ea eius. Officiis
-                vitae alias dicta?
+                I'm currently exploring various areas of computer science,
+                including Web Development, Machine Learning, and Software
+                Development. I'm also a member of Google Developer Student at
+                Universitas Sultan Ageng Tirtayasa, where I've had the
+                opportunity to collaborate with other students on exciting
+                projects and attend talks from industry professionals. After
+                graduation, I hope to pursue a career as aSoftware Developer and
+                make a difference in the world through technology. Thanks for
+                stopping by my page, and feel free to reach out to me if you'd
+                like to connect!
+              </p>
+              <p>
+                During my studies, I've had the opportunity to work on a variety
+                of projects that have helped me develop my skills and gain
+                hands-on experience in the field. For example, I worked on a
+                team to develop a Digital Library Program Using C++, The Purpose
+                of the program is to digitalize library so that everyone can
+                access it more freely. I also completed an internship at
+                Internasional Office Universitas Sultan Ageng Tirtayasa where I
+                manage and maintain
+                <a href="https://io.untirta.ac.id">IO Untirta</a> to updating
+                the content inside and uploading news about IO Untirta. These
+                experiences have taught me the importance of collaboration,
+                attention to detail, and problem-solving, and I'm excited to
+                continue learning and growing in my future endeavors.
               </p>
             </div>
 
-            <div class="about-foto hidden">
+            <div class="about-foto">
               <img id="myImg" src="aset/pasfoto.jpg" alt="Foto Diri" />
             </div>
             <!-- The Modal -->
@@ -157,13 +162,25 @@
                 <h4>Git</h4>
               </div>
             </div>
+            <div class="container hidden">
+              <img src="aset/wordpress.png" alt="Wordpess Logo" />
+              <div class="text">
+                <h4>Wordpress</h4>
+              </div>
+            </div>
+            <div class="container hidden">
+              <img src="aset/cms1.png" alt="CMS Logo" />
+              <div class="text">
+                <h4>Content Management System</h4>
+              </div>
+            </div>
           </div>
         </section>
       </div>
       <!-- skill section End -->
 
       <!-- Gallery -->
-      <div class="gallery">
+      <div class="gallery" id="gallery">
         <h2>Gallery</h2>
         <div class="row">
           <div class="column hidden">
@@ -178,58 +195,11 @@
         </div>
       </div>
 
-      <!-- contact section start -->
-
-      <div>
-        <section class="contact" id="contact">
-          <h2>Contact</h2>
-          <div class="list">
-            <div class="container hidden">
-              <a href="mailto:ibrahiimm.f@gmail.com" target="_blank"
-                ><i class="fa-solid fa-envelope"></i
-              ></a>
-            </div>
-            <div class="container hidden">
-              <a href="https://ibrahimfe.github.io" target="_blank"
-                ><i class="fa-solid fa-link"></i
-              ></a>
-            </div>
-            <div class="container hidden">
-              <a href="https://www.instagram.com/baim.38/" target="_blank"
-                ><i class="fa-brands fa-instagram"></i
-              ></a>
-            </div>
-            <div class="container hidden">
-              <a href="https://github.com/ibrahimfe" target="_blank"
-                ><i class="fa-brands fa-github"></i
-              ></a>
-            </div>
-            <div class="container hidden">
-              <a href="https://www.linkedin.com/in/ibra-him-/" target="_blank"
-                ><i class="fa-brands fa-linkedin"></i
-              ></a>
-            </div>
-            <div class="container hidden">
-              <a
-                href="https://www.youtube.com/@Ibrahim-qt9bs/featured"
-                target="_blank"
-                ><i class="fa-brands fa-youtube"></i
-              ></a>
-            </div>
-            <div class="container hidden">
-              <a href="https://wa.me/6281213369280" target="_blank"
-                ><i class="fa-brands fa-whatsapp"></i
-              ></a>
-            </div>
-          </div>
-        </section>
-      </div>
-      <!-- contact section end -->
       <!-- Form start -->
       <div>
         <form class="form" id="form">
           <h2>Send Me a Letter</h2>
-          <div class="form-main">
+          <div class="form-main hidden">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required />
 
@@ -252,6 +222,53 @@
         </form>
       </div>
       <!-- Form end -->
+      <!-- contact section start -->
+
+      <div>
+        <section class="contact" id="contact">
+          <h2>Contact</h2>
+          <div class="list">
+            <div class="container">
+              <a href="mailto:ibrahiimm.f@gmail.com" target="_blank"
+                ><i class="fa-solid fa-envelope"></i
+              ></a>
+            </div>
+            <div class="container">
+              <a href="https://ibrahimfe.github.io" target="_blank"
+                ><i class="fa-solid fa-link"></i
+              ></a>
+            </div>
+            <div class="container">
+              <a href="https://www.instagram.com/baim.38/" target="_blank"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
+            </div>
+            <div class="container">
+              <a href="https://github.com/ibrahimfe" target="_blank"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+            </div>
+            <div class="container">
+              <a href="https://www.linkedin.com/in/ibra-him-/" target="_blank"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+            </div>
+            <div class="container">
+              <a
+                href="https://www.youtube.com/@Ibrahim-qt9bs/featured"
+                target="_blank"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </div>
+            <div class="container">
+              <a href="https://wa.me/6281213369280" target="_blank"
+                ><i class="fa-brands fa-whatsapp"></i
+              ></a>
+            </div>
+          </div>
+        </section>
+      </div>
+      <!-- contact section end -->
     </main>
     <!-- Footer -->
     <div>
@@ -260,6 +277,7 @@
           <a href="#home"><i class="fa-solid fa-home"></i> Home</a>
           <a href="#about"><i class="fa-solid fa-user"></i> About Me</a>
           <a href="#skill"><i class="fa-solid fa-code"></i> Skill & Tools</a>
+          <a href="#gallery"><i class="fa-solid fa-image"></i> Gallery</a>
           <a href="#contact"
             ><i class="fa-solid fa-address-book"></i> Contact Me</a
           >
