updating gallery and css file

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             <div class="content hidden">
               <h3>Who Am I?</h3>
               <p>
-                Hey, everyone! I'm Ibrahim, a computer science undergraduate
-                student studying at Universitas Sultan Ageng Tirtayasa. I've
-                always been fascinated by technology and how it can make our
-                lives easier and more efficient. That's why I decided to pursue
-                a degree in computer science. When I'm not working on my
-                studies, you can find me tinkering with code, learning new
-                programming languages, or playing video games.
+                Hey, everyone! I'm <span>Ibrahim</span>, a computer science
+                undergraduate student studying at Universitas Sultan Ageng
+                Tirtayasa. I've always been fascinated by technology and how it
+                can make our lives easier and more efficient. That's why I
+                decided to pursue a degree in computer science. When I'm not
+                working on my studies, you can find me tinkering with code,
+                learning new programming languages, or playing video games.
               </p>
               <p>
                 I'm currently exploring various areas of computer science,
@@ -187,13 +187,38 @@
             <img src="aset/foto1.JPG" alt="Achievement 1" style="width: 100%" />
           </div>
           <div class="column hidden">
-            <img src="aset/foto2.jpg" alt="Forest" style="width: 100%" />
+            <img
+              src="aset/foto2.jpg"
+              alt="Huawei ICT Competition"
+              style="width: 100%"
+            />
           </div>
           <div class="column hidden">
-            <img src="aset/foto3.jpg" alt="Mountains" style="width: 100%" />
+            <img
+              src="aset/foto3.jpg"
+              alt="Huawei ICT Competition"
+              style="width: 100%"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <div class="column hidden">
+            <img
+              src="aset/foto3.jpeg"
+              alt="Foto Bersama IO Untirta"
+              style="width: 100%"
+            />
+          </div>
+          <div class="column hidden">
+            <img
+              src="aset/foto4.jpeg"
+              alt="Foto Bersama IO Untirta"
+              style="width: 100%"
+            />
           </div>
         </div>
       </div>
+      <!-- Gallery End -->
 
       <!-- Form start -->
       <div>
